# basic_claude_code

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.txt  FEATURES_COMPARISON.md  FINAL_IMPLEMENTATION_REPORT.md  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SHOWCASE.html  PROJECT_STATS.txt  QUICKSTART.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  pyproject.toml  test_parallel_structure.py  test_streaming_simple.py  使用指南.md  快速参考.md
demos/: __init__.py  benchmark.py  comprehensive_demo.py  html_report_demo.py  optimized_benchmark.py  parallel_agents.py  simple_demo.py  streaming_demo.py
kimi_code/: __init__.py  agent.py  agent_streaming.py  cli.py  config.py  cost_tracker.py  models.py  permissions.py  session_manager.py
kimi_code/providers/: __init__.py  anthropic_provider.py  base.py  kimi_provider.py
kimi_code/tools/: __init__.py  base.py  bash.py  edit.py  glob_tool.py  grep_tool.py  read.py  task.py  web_fetch.py  web_search.py  write.py
kimi_code/ui/: __init__.py  console.py  html_report.py  interactive_repl.py  repl.py  stream_display.py
